@@ -254,6 +254,8 @@ while ($row = DBfetch($result)) {
 }
 order_result($iconList, 'name');
 
+// we need selements to be a hash for further processing
+$sysmap['selements'] = zbx_toHash($sysmap['selements'], 'selementid');
 zbx_add_post_js('ZABBIX.apps.map.run("sysmap_cnt", '.CJs::encodeJson(array(
 	'sysmap' => $sysmap,
 	'iconList' => $iconList,
